--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -81,6 +81,7 @@
       {% endfor %}
     </ul>
 
+    {% if target_column not in cat_columns %}
     <h1 style="color: #00bfff; text-align: center">Categorical Columns:</h1>
     <ul
       style="
@@ -92,9 +93,26 @@
       "
     >
       {% for col in cat_columns %}
+      {% if col != target_column %}
       <li style="text-align: left; margin: 0 10px">{{ col }}</li>
+      {% endif %}
       {% endfor %}
     </ul>
+    {% endif %}
+
+    <h1 style="color: #00bfff; text-align: center">Target Column:</h1>
+    <ul
+      style="
+        text-align: center;
+        list-style-position: inside;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+      "
+    >
+      <li style="text-align: left; margin: 0 10px">{{ target_column }}</li>
+    </ul>
+    
 
     <h1 style="color: #00bfff; text-align: center">Head</h1>
     <div style="overflow-x: auto; margin: 0 auto; width: 80%">
@@ -179,6 +197,26 @@
     <h1 style="color: #00bfff; font-size: 50px; text-align: center">
       Preprocessing Data for {{ filename }}
     </h1>
+    <h1 style="color: #00bfff; text-align: center">
+
+      <h1 style="color: #00bfff; text-align: center">
+        Columns with Missing Values (Dropped):
+    </h1>
+    <ul
+        style="
+            text-align: center;
+            list-style-position: inside;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        "
+    >
+        {% for col in dropped_columns %}
+        <li style="text-align: left; margin: 0 10px">{{ col }}</li>
+        {% endfor %}
+        <li style="text-align: left; margin: 0 10px">ph</li>
+        <li style="text-align: left; margin: 0 10px">Sulfate</li>
+    </ul>
 
     <h1 style="color: #00bfff; text-align: center">
       Columns with Missing Values:
